<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/permissionDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/onboarding_dialog_title_location_permission"
            android:textAppearance="?textAppearanceSubtitle1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/illustrationIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_marker_24_32" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/onboarding_dialog_description_location_permission"
            android:textAppearance="?textAppearanceBody2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/onboarding_btn_give_permission" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>